--- a/css/main.css
+++ b/css/main.css
@@ -87,30 +87,40 @@ body {
 }
 
 .social-meida__list {
-    position: relative;
+    list-style-type: none;
     display: flex;
     justify-content: space-between;
-    align-items:center;
-    width: 200px;
-    padding: 10px;
-    margin-left: 10px;
+    width: 180px;
+    padding: 10px 0;
+    margin-left: 30px;
 }
 
 .social-media__list-item{
     font-size: 8px;
+  margin-left: 20px;
 }
 
 .social-meida__list-item--fb i {
     background-color: #ffffff;
     padding-left: 3px;
-    margin-bottom: 2px;
-    font-size: 8px;
 }
+
+.social-meida__list-item--instagram {
+    font-size: 1.5rem;
+}
+
+.social-meida__list-item--colon span{
+    color: var(--black-color);
+    background-color: var(--white-color);
+    border-radius: 2px;
+    max-height: 18px;
+    max-width: 15px;
+    font-size: 2rem;
+    font-weight: 800
+}
+
 .social-media__list-item--bell i {
-    position: absolute;
-    right: 80px;
-    top: 11px;
-    font-size: 4px;
+    font-size: 1rem;
     background-color: #ffffff;
     border-radius: 50%;
     padding: 3px;
@@ -226,16 +236,14 @@ body {
 }
 
 .body-left {
-    display: grid;
     gap: 10px;
     width: 60%;
-    border: 1px solid black;
     margin-left: 20px;
 }
 
 .body-left__content {
     background-color: var(--white-color);
-    margin: 10px 10px;
+    margin-bottom: ;
 }
 
 .body-left__subtitle {
